tests/examples/snapshots/fail/sort_checking_bool.fly.z3.snap
---
source: tests/test_examples.rs
description: "--expect-fail --all-solvers -- verify tests/examples/fail/sort_checking_bool.fly"
expression: combined_stdout_stderr
---

======== STDERR: ===========
thread 'main' panicked at 'unexpected check-sat response (error "line 7 column 40: Sort mismatch at argument #1 for function (declare-fun and (Bool Bool) Bool) supplied sort is s")
sat', src/smtlib/proc.rs:314:9
note: run with `RUST_BACKTRACE=1` environment variable to display a backtrace

