tests/examples/snapshots/fail/sort_checking_forall.fly.z3.snap
---
source: tests/test_examples.rs
description: "--expect-fail --all-solvers -- verify tests/examples/fail/sort_checking_forall.fly"
expression: combined_stdout_stderr
---

======== STDERR: ===========
thread 'main' panicked at 'unexpected check-sat response (error "line 8 column 39: unknown constant r (Bool) 
declared: (declare-fun r (s) Bool) ")
sat', src/smtlib/proc.rs:314:9
note: run with `RUST_BACKTRACE=1` environment variable to display a backtrace

